Fix word wrapping on mobile dashboard

--- a/app/assets/stylesheets/components/buttons.scss
+++ b/app/assets/stylesheets/components/buttons.scss
@@ -48,6 +48,7 @@
   cursor: pointer;
   transition: all var(--transition-props);
   border: var(--border-width) solid;
+  overflow-wrap: break-word;
 
   // Styles
   --bg: var(--button-primary-bg);
